--- a/firebase-actions/action.yml
+++ b/firebase-actions/action.yml
@@ -2,21 +2,15 @@ name: "Firebase Actions"
 description: "This will integrate with firebase"
 author: "Chandra Kiran"
 inputs:
-  FIREBASE_TOKEN:
-    description: "Firebase token"
+  FIREBASE_CLIENT_EMAIL:
+    description: "Client email"
     required: true
-  ACTION:
-    description: "Action to perform"
-    required: true
-  KEY:
-    description: "KEY"
-    required: true
-  VALUE:
-    description: "VALUE"
+  FIREBASE_PRIVATE_KEY:
+    description: "Private key"
     required: true
 outputs:
-  VALUE:
-    description: "Output for the get action."
+  ACCESS_TOKEN:
+    description: "Output for the access token."
 runs:
   using: "node12"
   main: "dist/index.js"
